Update CORS configuration and allowed origins